--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="purpleE6E6FA">#E6E6FA</color>
+    <color name="purple9370DB">#9370DB</color>
+    <color name="blue6A5ACD">#6A5ACD</color>
 </resources>
