--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="backgroundWhiteF8f8ff">#F8F8FF</color>
 
     <color name="purpleE6E6FA">#E6E6FA</color>
     <color name="purple9370DB">#9370DB</color>
     <color name="blue6A5ACD">#6A5ACD</color>
+    <color name="blue5F9EA0">#5F9EA0</color>
+    <color name="green20B2AA">#20B2AA</color>
+    <color name="gray757575">#757575</color>
 </resources>
