--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -35,8 +35,8 @@
 
     <ImageView
         android:id="@+id/large_android_imageView"
-        android:layout_width="54dp"
-        android:layout_height="54dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:layout_marginTop="16dp"
         android:src="@drawable/ic_android_icon"
         app:layout_constraintStart_toStartOf="@id/left_guideLine"
@@ -102,6 +102,32 @@
         app:layout_constraintTop_toBottomOf="@id/top_guideLine"
         app:layout_constraintStart_toStartOf="@id/left_guideLine"
         app:layout_constraintEnd_toEndOf="@id/right_guideLine"/>
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/middle_tabLayout"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="16dp"
+        android:background="@android:color/transparent"
+        app:tabPaddingStart="0dp"
+        app:tabPaddingEnd="0dp"
+        app:tabRippleColor="@null"
+        app:tabMode="scrollable"
+        app:tabIndicatorColor="@color/green20B2AA"
+        app:tabSelectedTextColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/top_tab_tabLayout"
+        app:layout_constraintStart_toStartOf="@id/left_guideLine"
+        app:layout_constraintEnd_toEndOf="@id/right_guideLine">
+    </com.google.android.material.tabs.TabLayout>
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/wallet_viewPager2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/middle_tabLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 
     <ProgressBar
         android:id="@+id/progressBar"
