update: 清code, 加註解

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -10,7 +10,7 @@
         android:id="@+id/chat_fragment_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CHAT"
+        android:text="@string/chat"
         android:textColor="@color/black"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
