--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -10,7 +10,7 @@
         android:id="@+id/chat_fragment_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="EXPLORE"
+        android:text="@string/explore"
         android:textColor="@color/black"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
