--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -42,7 +42,7 @@
         android:id="@+id/signInTitle_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Registration"
+        android:text="@string/registration"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
@@ -66,7 +66,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="First Name"
+            android:hint="@string/first_name"
             android:inputType="text"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -85,7 +85,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Last Name"
+            android:hint="@string/last_name"
             android:inputType="text"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -102,7 +102,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Email"
+            android:hint="@string/email"
             android:inputType="textEmailAddress"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -120,7 +120,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
+            android:hint="@string/password"
             android:inputType="textPassword"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -131,7 +131,7 @@
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
         android:backgroundTint="@color/blue6A5ACD"
-        android:text="REGISTER"
+        android:text="@string/register"
         app:layout_constraintStart_toStartOf="@id/left_guideLine"
         app:layout_constraintEnd_toEndOf="@id/right_guideLine"
         app:layout_constraintTop_toBottomOf="@id/password_textInputLayout"/>
