--- a/app/src/main/res/layout/layout_bottom_tab.xml
+++ b/app/src/main/res/layout/layout_bottom_tab.xml
@@ -39,7 +39,7 @@
         android:minWidth="19dp"
         android:gravity="center"
         android:background="@drawable/shape_count_background"
-        android:text="1"
+        android:text="@string/fake_bottom_tab_count"
         android:visibility="gone"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@id/bottom_tab_description_imageView"
