--- a/app/src/main/res/layout/layout_wallet_item.xml
+++ b/app/src/main/res/layout/layout_wallet_item.xml
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:elevation="4dp"
-        android:text="Coin"
+        android:text="@string/coin"
         android:textSize="16sp"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -81,7 +81,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="4dp"
-        android:text="XNC(Bag)"
+        android:text="@string/xnc_bag"
         app:layout_constraintTop_toBottomOf="@id/coin_title_textView"
         app:layout_constraintStart_toStartOf="@id/coin_title_textView"
         app:layout_constraintBottom_toBottomOf="@id/small_android_imageView"/>
@@ -137,7 +137,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="36dp"
         android:elevation="4dp"
-        android:text="Interaction Rewards"
+        android:text="@string/interaction_rewards"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/wallet_item_progressbar"
@@ -160,7 +160,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:elevation="4dp"
-        android:text="Social Rewards"
+        android:text="@string/social_rewards"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/interaction_reward_title_textView"
@@ -181,7 +181,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="4dp"
-        android:text="Revenue"
+        android:text="@string/revenue"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/social_reward_title_textView"
@@ -211,7 +211,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="4dp"
-        android:text="More"
+        android:text="@string/more"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:textSize="18sp"
@@ -232,7 +232,7 @@
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:background="@drawable/shape_count_background"
-        android:text="4"
+        android:text="@string/fake_wallet_item_tab_count"
         android:visibility="gone"
         android:textColor="@color/white"
         app:layout_constraintTop_toTopOf="parent"
